--- a/app/src/main/res/layout/fragment_add_3_thoughts.xml
+++ b/app/src/main/res/layout/fragment_add_3_thoughts.xml
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/buttons"
-        android:inputType="textMultiLine|textCapSentences"
+        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
         android:gravity="start|top"
         android:textIsSelectable="true"
         android:longClickable="true"
