--- a/app/src/main/res/layout/fragment_add_4_expression.xml
+++ b/app/src/main/res/layout/fragment_add_4_expression.xml
@@ -52,7 +52,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottledCheck"
         android:gravity="start|top"
-        android:inputType="textMultiLine|textCapSentences"
+        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
         android:textIsSelectable="true"
         android:longClickable="true"
         android:focusable="true"
