--- a/app/src/main/res/layout/activity_view_entries.xml
+++ b/app/src/main/res/layout/activity_view_entries.xml
@@ -16,9 +16,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorPrimaryDark"
             android:text="CBT Helper"
-            app:itemBackground="@color/colorPrimary"
+            app:itemBackground="@color/colorPrimaryDark"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             />
 
@@ -37,6 +37,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@drawable/ic_plus" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
