--- a/app/src/main/res/layout/fragment_add_2_experience.xml
+++ b/app/src/main/res/layout/fragment_add_2_experience.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddEntry1Fragment"
+    tools:context=".editentry.AddEntry1Fragment"
     >
 
     <TextView
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/textView1"
         app:layout_constraintVertical_chainStyle="spread"
+        android:visibility="gone"
         tools:ignore="HardcodedText"
         />
 
