--- a/app/src/main/res/layout/fragment_add_6_assumptions.xml
+++ b/app/src/main/res/layout/fragment_add_6_assumptions.xml
@@ -19,6 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/textView1"
         app:layout_constraintVertical_chainStyle="spread_inside"
+        android:visibility="gone"
         tools:ignore="HardcodedText"
         />
 
