--- a/app/src/main/res/layout/fragment_add_1_situation.xml
+++ b/app/src/main/res/layout/fragment_add_1_situation.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddEntry1Fragment"
+    tools:context=".editentry.AddEntry1Fragment"
     >
 
     <TextView
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/textView1"
         app:layout_constraintVertical_chainStyle="spread_inside"
+        android:visibility="gone"
         tools:ignore="HardcodedText"
         />
 
@@ -48,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textView2"
+        app:layout_constraintBottom_toTopOf="@id/textView3"
         >
 
         <RadioButton
@@ -69,6 +70,40 @@
     </RadioGroup>
 
     <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="What happened? Briefly note what you heard and saw."
+        app:layout_constraintTop_toBottomOf="@id/situationType"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/situationDesc"
+        android:labelFor="@id/situationDesc"
+        tools:ignore="HardcodedText"
+        />
+
+    <EditText
+        android:id="@+id/situationDesc"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/textView2"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:inputType="textMultiLine|textCapSentences"
+        android:textIsSelectable="true"
+        android:longClickable="true"
+        android:focusable="true"
+        android:gravity="start|top"
+        android:importantForAutofill="no"
+        />
+
+    <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -76,7 +111,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="More details"
-        app:layout_constraintTop_toBottomOf="@id/situationType"
+        app:layout_constraintTop_toBottomOf="@id/situationDesc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/whoWhere"
@@ -93,7 +128,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textView3"
+        app:layout_constraintBottom_toTopOf="@id/buttons"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:inputType="textCapSentences|textAutoCorrect"
@@ -105,39 +140,6 @@
         android:imeOptions="actionDone"
         />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="What happened? Briefly note what you heard and saw."
-        app:layout_constraintTop_toBottomOf="@id/whoWhere"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/situationDesc"
-        android:labelFor="@id/situationDesc"
-        tools:ignore="HardcodedText"
-        />
-
-    <EditText
-        android:id="@+id/situationDesc"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/buttons"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:inputType="textMultiLine|textCapSentences"
-        android:textIsSelectable="true"
-        android:longClickable="true"
-        android:focusable="true"
-        android:gravity="start|top"
-        android:importantForAutofill="no"
-        />
 
     <include
         android:id="@+id/buttons"
