--- a/app/src/main/res/layout/fragment_analyze_3_ratrep_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_3_ratrep_summary.xml
@@ -18,7 +18,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Replacement Thoughts"
+            android:text="Summary"
             android:gravity="center"
             android:textSize="26sp"
             android:paddingBottom="8dp"
@@ -26,10 +26,22 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/thoughtHeading"
+            app:layout_constraintBottom_toTopOf="@id/continueButton"
             app:layout_constraintVertical_chainStyle="spread_inside"
             tools:ignore="HardcodedText"
             />
+
+        <Button
+            android:id="@+id/continueButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/continue_behavior_validity_test"
+            app:layout_constraintBottom_toTopOf="@id/thoughtHeading"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <TextView style="@style/TextViewHeading"
             android:id="@+id/thoughtHeading"
@@ -37,7 +49,7 @@
             android:layout_height="wrap_content"
             android:labelFor="@id/situationType"
             android:text="You thought:"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@id/continueButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/thought"
@@ -127,7 +139,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:labelFor="@id/comparison"
-            android:text="How do these compare? Is it emotionally healthier?"
+            android:text="How do these compare? Would thinking this way have been emotionally healthier?"
             app:layout_constraintBottom_toTopOf="@id/comparison"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +151,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:importantForAutofill="no"
-            android:inputType="textLongMessage"
+            android:inputType="textLongMessage|textCapSentences"
             android:minHeight="160dp"
             app:layout_constraintBottom_toTopOf="@id/expressedHeading"
             app:layout_constraintEnd_toEndOf="parent"
@@ -233,6 +245,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:labelFor="@id/situationType"
+            android:visibility="gone"
             android:text="No, skip the test because I already know that my behavior was:"
             app:layout_constraintBottom_toTopOf="@id/skipRationalButton"
             app:layout_constraintEnd_toEndOf="parent"
@@ -247,6 +260,7 @@
             android:layout_marginBottom="32dp"
             android:padding="16dp"
             android:text="@string/rational"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@id/skipIrrationalButton"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
@@ -258,6 +272,7 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:text="@string/irrational"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/skipRationalButton"
             app:layout_constraintTop_toTopOf="@id/skipRationalButton" />
