--- a/app/src/main/res/layout/question_slider.xml
+++ b/app/src/main/res/layout/question_slider.xml
@@ -15,8 +15,8 @@
                 android:text="question"
                 tools:text="@string/validityQuestion12"
                 android:layout_marginTop="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -29,9 +29,8 @@
                 android:id="@+id/minimumDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="65dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
-                android:labelFor="@id/answerVal"
                 app:layout_constraintTop_toBottomOf="@id/question"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/answer"
@@ -44,7 +43,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="65dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
                 android:labelFor="@id/answer"
                 android:textSize="28sp"
                 android:text="4"
@@ -59,10 +57,11 @@
                 android:layout_width="0dp"
                 android:layout_height="65dp"
                 android:text="question"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="0dp"
+                android:layout_gravity="top"
                 app:layout_constraintTop_toTopOf="@id/minimumDesc"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:labelFor="@id/answer"
                 tools:text="Completely\nrational"
                 tools:ignore="HardcodedText"
