--- a/app/src/main/res/layout/fragment_analyze_1_entry_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_1_entry_summary.xml
@@ -4,13 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorBackground"
-    android:id="@+id/scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <LinearLayout
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         >
 
         <TextView
@@ -22,12 +24,20 @@
             android:gravity="center"
             android:textSize="26sp"
             android:background="@drawable/bottom_border"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/situationLabel"
-            app:layout_constraintVertical_chainStyle="spread_inside"
             tools:ignore="HardcodedText"
+            />
+
+        <Button
+            android:id="@+id/continueButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="@string/continue_cognition_validity_test"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             />
 
         <TextView style="@style/TextViewHeading"
@@ -35,11 +45,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="The situation you were in:"
-            app:layout_constraintTop_toBottomOf="@id/pageTitle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/situation"
-            app:layout_constraintVertical_chainStyle="spread_inside"
             tools:ignore="HardcodedText"
             />
 
@@ -50,10 +55,6 @@
             tools:text="We had a fight. I turned into a raging maniac and threw a computer against the wall."
             android:layout_marginTop="16dp"
             android:gravity="top"
-            app:layout_constraintTop_toBottomOf="@id/situationLabel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/emotionLabel"
             tools:ignore="HardcodedText"
             />
 
@@ -63,24 +64,15 @@
             android:layout_height="wrap_content"
             android:text="You felt:"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/situation"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/emotions"
-            app:layout_constraintVertical_chainStyle="spread_inside"
             tools:ignore="HardcodedText"
             />
 
         <TextView style="@style/TextViewDatum"
             android:id="@+id/emotions"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Anger, Embarrassment"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/emotionLabel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/testInvitation"
             android:labelFor="@id/situationType"
             tools:ignore="HardcodedText"
             />
@@ -91,10 +83,6 @@
             android:layout_height="wrap_content"
             android:text="Let’s test whether these thoughts were rational or irrational:"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/emotions"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/testButton"
             android:labelFor="@id/situationType"
             tools:ignore="HardcodedText"
             />
@@ -105,52 +93,50 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:text="@string/begin_cognition_validity_test"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintTop_toBottomOf="@id/testInvitation"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/skipInvitation"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             />
 
         <TextView style="@style/TextViewHeading"
             android:id="@+id/skipInvitation"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Or you can skip the test because you already know that your thoughts were:"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/emotions"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/skipRationalButton"
             android:labelFor="@id/situationType"
             tools:ignore="HardcodedText"
             />
 
-        <Button
-            android:id="@+id/skipRationalButton"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/rational"
-            android:padding="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintTop_toBottomOf="@id/skipInvitation"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/skipIrrationalButton"
-            />
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:visibility="gone"
+            >
 
-        <Button
-            android:id="@+id/skipIrrationalButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="@string/irrational"
-            app:layout_constraintTop_toTopOf="@id/skipRationalButton"
-            app:layout_constraintStart_toEndOf="@id/skipRationalButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            <Button
+                android:id="@+id/skipRationalButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rational"
+                android:padding="16dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
+                android:layout_marginEnd="32dp"
+                />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/skipIrrationalButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@string/irrational"
+                />
+
+        </LinearLayout>
+    </LinearLayout>
 </ScrollView>
