--- a/app/src/main/res/layout/fragment_analyze_2_cogval_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_2_cogval_summary.xml
@@ -17,12 +17,25 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cognition Validity"
+            android:text="Summary"
             android:paddingBottom="8dp"
             android:gravity="center"
             android:textSize="26sp"
             android:background="@drawable/bottom_border"
             tools:ignore="HardcodedText"
+            />
+
+        <Button
+            android:id="@+id/continueRationalButton"
+            android:layout_width="wrap_content"
+            android:minWidth="128dp"
+            android:layout_height="wrap_content"
+            android:text="@string/continue_replacement_thoughts"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             />
 
         <TextView style="@style/TextViewHeading"
@@ -67,15 +80,10 @@
             android:text="@string/validitySummary5"
             />
 
-        <!--
-                    style="?android:attr/buttonBarStyle"
-                    style="?android:attr/buttonBarButtonStyle"
-        -->
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:gravity="center"
             >
 
@@ -84,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:minWidth="128dp"
                 android:layout_height="wrap_content"
-                android:text="Explore replacement thoughts"
+                android:text="@string/begin_replacement_thoughts"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="8dp"
@@ -94,8 +102,8 @@
                 android:id="@+id/skipRationalButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/skip_to_behavior"
                 android:visibility="gone"
-                android:text="Skip to behavior"
                 />
 
         </LinearLayout>
