--- a/app/src/main/res/layout/fragment_analyze_4_behavior_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_4_behavior_summary.xml
@@ -9,41 +9,48 @@
     android:layout_height="match_parent"
   >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/content"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Behavior"
+            android:text="Summary"
             android:gravity="center"
             android:textSize="26sp"
             android:paddingBottom="8dp"
             android:background="@drawable/bottom_border"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/thoughtHeading"
-            app:layout_constraintVertical_chainStyle="spread_inside"
             tools:ignore="HardcodedText"
             />
 
         <TextView style="@style/TextViewHeading"
-            android:id="@+id/thoughtHeading"
+            android:id="@+id/expressedHeading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:labelFor="@id/situationType"
-            android:text="TODO"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="Sounds like the way you expressed your emotions was not as rational or healthy as it could have been. For example, you noted these errors:"
             tools:ignore="HardcodedText" />
 
+        <TextView style="@style/TextViewDatum"
+            android:id="@+id/errors"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Overshoulding"
+            />
 
+      <!--  <TextView style="@style/TextViewHeading"
+            android:id="@+id/doneInstead"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:labelFor="@id/situationType"
+            android:text="What could you have done instead?"
+            tools:ignore="HardcodedText" />-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </ScrollView>
