--- a/app/src/main/res/layout/fragment_behavior_question_text.xml
+++ b/app/src/main/res/layout/fragment_behavior_question_text.xml
@@ -85,7 +85,7 @@
                 app:layout_constraintVertical_weight="50"
                 tools:ignore="HardcodedText"
                 android:importantForAutofill="no"
-                android:inputType="textLongMessage"
+                android:inputType="textLongMessage|textCapSentences"
                 />
 
         </LinearLayout>
