--- a/app/src/main/res/layout/fragment_replacement_1.xml
+++ b/app/src/main/res/layout/fragment_replacement_1.xml
@@ -18,8 +18,9 @@
         app:layout_constraintBottom_toTopOf="@id/buttons"
         >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/content"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -29,10 +30,6 @@
                 android:layout_height="wrap_content"
                 android:labelFor="@id/situationType"
                 android:text="The situation:"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/situation"
                 tools:ignore="HardcodedText" />
 
             <TextView style="@style/TextViewDatum"
@@ -40,10 +37,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/situationHeading"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/emotionsHeading"
                 tools:ignore="HardcodedText"
                 tools:text="I was in the bar..." />
 
@@ -54,10 +47,6 @@
                 android:layout_marginTop="16dp"
                 android:labelFor="@id/situationType"
                 android:text="Your thoughts:"
-                app:layout_constraintTop_toBottomOf="@id/situation"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/thoughts"
                 tools:ignore="HardcodedText" />
 
             <TextView style="@style/TextViewDatum"
@@ -65,10 +54,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/emotionsHeading"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/errorsHeading"
                 tools:ignore="HardcodedText"
                 tools:text="I suck..." />
 
@@ -79,10 +64,6 @@
                 android:layout_marginTop="16dp"
                 android:labelFor="@id/situationType"
                 android:text="Thinking errors:"
-                app:layout_constraintTop_toBottomOf="@id/thoughts"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/errors"
                 tools:ignore="HardcodedText" />
 
             <TextView style="@style/TextViewDatum"
@@ -90,10 +71,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/errorsHeading"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/insteadHeading"
                 tools:ignore="HardcodedText"
                 tools:text="Overanalyzing" />
 
@@ -103,30 +80,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:labelFor="@id/answer"
+                app:drawableEndCompat="@android:drawable/ic_dialog_info"
                 android:text="Let's pretend that you could go back in time and redo this situation or conversation. What thoughts could you have had instead that would have been more rational?"
-                app:layout_constraintTop_toBottomOf="@id/errors"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/answer"
                 tools:ignore="HardcodedText" />
 
             <EditText style="@style/EditTextStyle"
                 android:id="@+id/answer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:importantForAutofill="no"
                 android:inputType="textLongMessage"
                 android:minHeight="360dp"
-                app:layout_constraintTop_toBottomOf="@id/insteadHeading"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_weight="50"
+                android:layout_marginTop="16dp"
                 tools:ignore="HardcodedText"
                 tools:text="text" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </ScrollView>
 
     <include
