--- a/app/src/main/res/layout/fragment_replacement_3.xml
+++ b/app/src/main/res/layout/fragment_replacement_3.xml
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:gravity="center"
                 app:layout_constraintTop_toBottomOf="@id/insteadHeading"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,15 +58,14 @@
                 app:layout_constraintTop_toBottomOf="@id/instead"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/emotions"
+                app:layout_constraintBottom_toTopOf="@id/emotionSel"
                 tools:ignore="HardcodedText" />
 
             <include
-                android:id="@+id/emotions"
+                android:id="@+id/emotionSel"
                 layout="@layout/emotion_selection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/emotionsHeading"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
