--- a/app/src/main/res/menu/menu_entry.xml
+++ b/app/src/main/res/menu/menu_entry.xml
@@ -11,10 +11,10 @@
         android:id="@+id/action_edit"
         android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_edit"
-        android:title="Edit" />
+        android:title="Edit entry" />
     <item
         android:id="@+id/action_delete"
         android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="Delete" />
+        android:title="Delete entry" />
 </menu>
