--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,6 +74,22 @@
         <item name="android:layout_marginTop">8dp</item>
     </style>
 
+    <style name="TextViewDatumCalculated" parent="@android:style/Widget.TextView">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textStyle">bold</item>
+<!--        <item name="android:background">@drawable/left_right_border</item>-->
+<!--        <item name="android:drawableStart">@drawable/ic_left_quote</item>-->
+<!--        <item name="android:drawableEnd">@drawable/ic_right_quote</item>-->
+<!--        <item name="android:drawableTint">@color/colorPrimary</item>-->
+        <item name="android:drawablePadding">8dp</item>
+        <item name="android:gravity">start</item>
+        <item name="android:paddingStart">4dp</item>
+        <item name="android:layout_marginStart">32dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
     <style name="TextViewStyle" parent="@android:style/Widget.TextView">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/colorText</item>
