--- a/app/src/main/res/layout/fragment_add_6_assumptions.xml
+++ b/app/src/main/res/layout/fragment_add_6_assumptions.xml
@@ -40,7 +40,7 @@
                 />
 
             <TextView style="@style/TextViewHeading"
-                android:id="@+id/textView1"
+                android:id="@+id/question"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:minHeight="256dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/textView1"
+                app:layout_constraintTop_toBottomOf="@id/question"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/readMore"
