--- a/app/src/main/res/layout/fragment_analyze_1_entry_summary.xml
+++ b/app/src/main/res/layout/fragment_analyze_1_entry_summary.xml
@@ -107,6 +107,7 @@
             android:text="Or you can skip the test because you already know that your thoughts were:"
             android:layout_marginTop="16dp"
             android:labelFor="@id/situationType"
+            android:visibility="gone"
             tools:ignore="HardcodedText"
             />
 
